--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <div class="text-6xl mb-4 animate-bounce-slow">🎉</div>
 
         <!-- Placeholder for birthday girl's photo -->
-        <img src="https://placehold.co/150x150/FFC0CB/FFFFFF?text=RyRy" alt="Birthday Girl" class="rounded-full mx-auto mb-6 shadow-lg border-4 border-pink-300 object-cover w-32 h-32 md:w-40 md:h-40">
+        <img src="https://raw.githubusercontent.com/linhtetmaw/HBDRyRy/refs/heads/main/RyRy.png" alt="Birthday Girl" class="rounded-full mx-auto mb-6 shadow-lg border-4 border-pink-300 object-cover w-32 h-32 md:w-40 md:h-40">
 
         <h1 class="text-4xl md:text-5xl font-extrabold text-pink-600 mb-4 tracking-tight">
             Happy RyRy Day!
