--- a/index.html
+++ b/index.html
@@ -78,8 +78,7 @@
             Happy RyRy Day!
         </h1>
         <p class="text-lg md:text-xl text-gray-700 leading-relaxed mb-6">
-            Wishing you a day filled with joy, laughter, and everything that makes you happy.
-            May your year ahead be even brighter!
+            Happy Birthday! Wishing you good health and well-being and great progress toward all your goals—life, gym, body, and foodie! May your year shine even brighter and be as sweet as desserts you love.
         </p>
         <p class="text-md md:text-lg font-semibold text-pink-500">
             Best wishes,
